--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
     <color name="home_gray_color">#A6A6A6</color>
     <color name="home_arrow_gray_color">#D4D4D4</color>
     <color name="home_not_food">#E31F1F</color>
+    <color name="gray_color_838E9A">#838E9A</color>
+
+    <color name="black_color_838E9A">#25282B</color>
+
 </resources>
