--- a/app/src/main/res/layout/dialog_bottom_restaurant_sheet.xml
+++ b/app/src/main/res/layout/dialog_bottom_restaurant_sheet.xml
@@ -21,12 +21,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/dialog_scrap_iv"
+        android:layout_width="14dp"
+        android:layout_height="12dp"
+        android:layout_marginEnd="3dp"
+        android:src="@drawable/group_14017"
+        app:layout_constraintBottom_toBottomOf="@+id/dialog_scrap_count_number_tv"
+        app:layout_constraintEnd_toStartOf="@+id/dialog_scrap_count_number_tv"
+        app:layout_constraintTop_toTopOf="@+id/dialog_scrap_count_number_tv" />
+
+    <TextView
+        android:id="@+id/dialog_scrap_count_number_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:text="@string/restaurant_example_scrap"
+        android:textColor="@color/gray_color_838E9A"
+        app:layout_constraintBottom_toBottomOf="@+id/dialog_name_tv"
+        app:layout_constraintEnd_toStartOf="@+id/dialog_scrap_count_tv"
+        app:layout_constraintTop_toTopOf="@+id/dialog_name_tv" />
+
+    <TextView
+        android:id="@+id/dialog_scrap_count_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="50dp"
+        android:text="@string/restaurant_scrap"
+        android:textColor="@color/gray_color_838E9A"
+        app:layout_constraintBottom_toBottomOf="@+id/dialog_name_tv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/dialog_name_tv" />
+
     <TextView
         android:id="@+id/dialog_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="33dp"
-        android:text="@string/restaurant_example_category"
+        android:text="@string/restaurant_example_name"
         android:textColor="@color/black_color_838E9A"
         app:layout_constraintBottom_toTopOf="@+id/dialog_category_tv"
         app:layout_constraintStart_toStartOf="parent" />
@@ -38,16 +70,17 @@
         android:layout_marginStart="33dp"
         android:layout_marginBottom="8dp"
         android:text="@string/restaurant_example_category"
+        android:textColor="@color/gray_color_838E9A"
         app:layout_constraintBottom_toTopOf="@+id/dialog_address_icon_iv"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/dialog_address_icon_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="19dp"
+        android:layout_height="19dp"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="12dp"
-        android:src="@drawable/ic_search1"
+        android:src="@drawable/place"
         app:layout_constraintBottom_toTopOf="@+id/vMiddleLine"
         app:layout_constraintStart_toStartOf="parent" />
 
