--- a/app/src/main/res/layout/dialog_bottom_restaurant_sheet.xml
+++ b/app/src/main/res/layout/dialog_bottom_restaurant_sheet.xml
@@ -117,7 +117,19 @@
             android:layout_weight="1"
             android:paddingVertical="14dp"
             android:src="@drawable/icon_love_shape"
-            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/dialog_bottom_scrap_iv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingVertical="14dp"
+            android:src="@drawable/ic_scrap"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
