--- a/app/src/main/res/layout/custom_balloon.xml
+++ b/app/src/main/res/layout/custom_balloon.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/marker_iv"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:src="@drawable/ic_map_marker"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/name"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/ic_unlove"
-        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="centerInside"
-        android:textColor="@android:color/black"
-        android:textSize="10sp"
+        android:textColor="@android:color/white"
+        android:textSize="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="2dp"
         tools:text="20" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
