fix(function1): error 수정

--- a/app/src/main/res/layout/item_widget_menu.xml
+++ b/app/src/main/res/layout/item_widget_menu.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
-    android:padding="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tvArea"
-        tools:text="명진당"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        />
+        android:textColor="@color/black"
+        android:textSize="12dp"
+        android:textStyle="bold"
+        tools:text="명진당" />
 
     <TextView
         android:id="@+id/tvFirstFoodType"
@@ -29,6 +28,7 @@
         android:text="@string/lunch_a_text"
         android:textColor="@color/sub_color"
         android:textSize="12dp"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -41,10 +41,10 @@
         android:breakStrategy="high_quality"
         android:fontFamily="@font/notosans_regular"
         android:maxLines="3"
-        tools:text="@string/food_list"
         android:textAlignment="center"
         android:textColor="#717171"
-        android:textSize="12dp" />
+        android:textSize="12dp"
+        tools:text="@string/food_list" />
 
     <TextView
         android:id="@+id/tvSecondFoodType"
@@ -56,6 +56,7 @@
         android:text="@string/lunch_b_text"
         android:textColor="@color/sub_color"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -69,13 +70,13 @@
         android:fontFamily="@font/notosans_regular"
         android:inputType="textMultiLine"
         android:maxLines="3"
-        tools:text="@string/food_list"
         android:textAlignment="center"
         android:textColor="#717171"
         android:textSize="12dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/today_day_lunch_b" />
+        app:layout_constraintTop_toBottomOf="@+id/today_day_lunch_b"
+        tools:text="@string/food_list" />
 
     <TextView
         android:id="@+id/tvThirdFoodType"
@@ -90,6 +91,7 @@
         android:textColor="@color/sub_color"
         android:textFontWeight="500"
         android:textSize="12dp"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -102,13 +104,13 @@
         android:breakStrategy="high_quality"
         android:fontFamily="@font/notosans_regular"
         android:maxLines="3"
-        tools:text="@string/food_list"
         android:textAlignment="center"
         android:textColor="#717171"
         android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/today_day_afternoon" />
+        app:layout_constraintTop_toBottomOf="@+id/today_day_afternoon"
+        tools:text="@string/food_list" />
 </LinearLayout>
 
 
