--- a/app/src/main/res/layout/item_widget_menu.xml
+++ b/app/src/main/res/layout/item_widget_menu.xml
@@ -206,6 +206,7 @@
             android:text="@string/weekend_not_service"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:layout_marginBottom="26dp"
             android:textStyle="bold"
             android:visibility="gone" />
 
