--- a/app/src/main/res/navigation/myongsik_nav_graph.xml
+++ b/app/src/main/res/navigation/myongsik_nav_graph.xml
@@ -125,5 +125,13 @@
         <action
             android:id="@+id/action_fragment_select_home_to_fragment_search"
             app:destination="@id/fragment_search" />
+        <action
+            android:id="@+id/action_fragment_select_home_to_widgetSettingFragment"
+            app:destination="@id/widgetSettingFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/widgetSettingFragment"
+        android:name="com.myongsik.myongsikandroid.ui.view.food.WidgetSettingFragment"
+        android:label="WidgetSettingFragment"
+        tools:layout="@layout/fragment_widget_setting"/>
 </navigation>
