[feat] : 자연캠퍼스 식당 선택 기능 구현

--- a/app/src/main/res/drawable/rect12_eaeaea.xml
+++ b/app/src/main/res/drawable/rect12_eaeaea.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/white"/>
     <corners android:radius="12dp"/>
-    <stroke android:color="#EAEAEA" android:width="2dp"/>
+    <stroke android:color="@color/gray_color_eaeaea" android:width="2dp"/>
 </shape>
