--- a/app/src/main/res/layout/fragment_widget_setting.xml
+++ b/app/src/main/res/layout/fragment_widget_setting.xml
@@ -60,7 +60,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/widget_uncheck_iv"
+            android:id="@+id/widget_dormitory_uncheck_iv"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
@@ -96,7 +96,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/widget_myongjin_iv"
+            android:id="@+id/widget_myongjin_uncheck_iv"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
@@ -132,7 +132,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/widget_student_iv"
+            android:id="@+id/widget_student_uncheck_iv"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
@@ -168,7 +168,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/widget_teacher_iv"
+            android:id="@+id/widget_teacher_uncheck_iv"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
