--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,5 @@
     <color name="black_color_838E9A">#25282B</color>
     <color name="gray_color_eaeaea">#EAEAEA</color>
     <color name="gray_color_d9d9d9">#D9D9D9</color>
-
+    <color name="gray_color_696161">#696161</color>
 </resources>
