--- a/app/src/main/res/layout/dialog_bottom_update_sheet.xml
+++ b/app/src/main/res/layout/dialog_bottom_update_sheet.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="20dp"
         android:background="#e5e5e5"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_update_widget_tv"
+        app:layout_constraintBottom_toTopOf="@+id/tv_battery_optimize"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,12 +47,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="2"
+        android:paddingHorizontal="15dp"
         android:text="@string/widget_text"
         android:textColor="@color/gray_color_696161"
         android:textSize="12sp"
-        android:paddingHorizontal="15dp"
         app:layout_constraintStart_toEndOf="@+id/bottom_update_widget_iv"
         app:layout_constraintTop_toBottomOf="@+id/bottom_update_widget_tv" />
+
+    <TextView
+        android:id="@+id/tv_battery_optimize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/battery_optimize_text"
+        android:textColor="#FF0000"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_update_widget_tv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="12dp" />
 
     <ImageView
         android:id="@+id/bottom_update_map_iv"
@@ -88,11 +101,27 @@
         app:layout_constraintTop_toBottomOf="@+id/bottom_update_map_tv" />
 
     <TextView
-        android:id="@+id/bottom_update_not_see_cl"
-        android:layout_width="match_parent"
+        android:id="@+id/bottom_battery_exception_cl"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="38dp"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/rect10_e5e5e5"
+        android:paddingVertical="12dp"
+        android:text="@string/battery_exception"
+        android:textAlignment="center"
+        android:textColor="@color/home_text_color"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="38dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/bottom_update_not_see_cl"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/bottom_update_not_see_cl"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/rect10_eaeaea"
         android:paddingVertical="12dp"
         android:text="@string/update_not_see"
@@ -100,8 +129,10 @@
         android:textColor="@color/white"
         android:textSize="14dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="38dp"
+        app:layout_constraintBottom_toBottomOf="@id/bottom_battery_exception_cl"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@id/bottom_battery_exception_cl" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
