--- a/app/src/main/res/layout/fragment_widget_setting.xml
+++ b/app/src/main/res/layout/fragment_widget_setting.xml
@@ -179,5 +179,22 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/bottom_battery_exception_cl"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="38dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rect10_e5e5e5"
+        android:paddingVertical="12dp"
+        android:text="@string/battery_exception"
+        android:textAlignment="center"
+        android:textColor="@color/home_text_color"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
